# meche433

./: questions.txt
hw10/main_hw10/: main_hw10.kicad_prl  main_hw10.kicad_pro
hw11/: detect_line.py
hw12/main/: main.c
hw13/main/: CMakeLists.txt  main.c
hw14/: FIR.py  iir.py  python_csv.py  python_fft.py  python_moving_average.py
hw16/: complile_pico.sh
hw16/main/: CMakeLists.txt  main.c
hw17/hw9/main/: CMakeLists.txt  main.c
hw3/loop/: CMakeLists.txt  loop.c
hw4/: .complile_pico.sh.swp
hw4/sinewave/: CMakeLists.txt  sinewave.c
hw4/trianglewave/: .sinewave.c.swp  .trianglewave.c.swp  trianglewave.c
hw5/sinewave/: CMakeLists.txt  sinewave.c
hw5/trianglewave/: CMakeLists.txt
hw6/main/: .ssd1306.h.swp  main.c
hw7/main/: CMakeLists.txt  main.c
hw8/: .complile_pico.sh.swp
hw8/main/: CMakeLists.txt
hw9/main/: main.c
